--- a/app/src/main/res/layout/activitiy_sign_cmpleted.xml
+++ b/app/src/main/res/layout/activitiy_sign_cmpleted.xml
@@ -17,7 +17,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintLeft_creator="1"
+       />
 
 
     <include
