--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,22 +7,22 @@
 
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/tv_login_name"
         android:layout_width="41dp"
         android:layout_height="30dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/phone"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText15"
-        app:layout_constraintHorizontal_bias="0.672"
+        app:layout_constraintBaseline_toBaselineOf="@+id/et_login_name"
+        app:layout_constraintHorizontal_bias="0.673"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/editText15"
-        tools:layout_editor_absoluteY="161dp"
+        app:layout_constraintRight_toLeftOf="@+id/et_login_name"
+        tools:layout_editor_absoluteY="157dp"
         tools:layout_editor_absoluteX="44dp" />
 
     <EditText
-        android:id="@+id/editText15"
+        android:id="@+id/et_login_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -37,33 +37,33 @@
         app:layout_constraintVertical_bias="0.028" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/tv_login_password"
         android:layout_width="44dp"
         android:layout_height="27dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/password"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText16"
+        app:layout_constraintBaseline_toBaselineOf="@+id/et_login_password"
         app:layout_constraintHorizontal_bias="0.721"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/editText16"
+        app:layout_constraintRight_toLeftOf="@+id/et_login_password"
         tools:layout_editor_absoluteY="238dp"
         tools:layout_editor_absoluteX="44dp" />
 
     <EditText
-        android:id="@+id/editText16"
+        android:id="@+id/et_login_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="37dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="287dp" />
+        android:layout_marginBottom="285dp" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_login_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login"
@@ -78,7 +78,7 @@
         app:layout_constraintVertical_bias="0.65" />
 
     <TextView
-        android:id="@+id/textView29"
+        android:id="@+id/tv_login_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register"
@@ -94,8 +94,7 @@
         app:layout_constraintVertical_bias="0.762" />
 
     <TextView
-        android:id="@+id/textView30"
-        android:layout_width="104dp"
+        android:id="@+id/textView30"        android:layout_width="104dp"
         android:layout_height="35dp"
         android:gravity="center"
         android:text="@string/app_name"
