完成了了一些界面还有业务逻辑,添加了拍照模块

--- a/app/src/main/res/layout/fragment_student_info.xml
+++ b/app/src/main/res/layout/fragment_student_info.xml
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView22"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textView24"
-            app:layout_constraintRight_toLeftOf="@+id/editText10"
+            app:layout_constraintRight_toLeftOf="@+id/et_student_class"
             android:layout_marginRight="8dp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent" />
@@ -36,9 +36,9 @@
             android:layout_marginRight="8dp"
             android:text="TextView"
             android:textSize="18sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/editText8"
+            app:layout_constraintBaseline_toBaselineOf="@+id/et_student_name"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/editText8"
+            app:layout_constraintRight_toLeftOf="@+id/et_student_name"
             tools:layout_editor_absoluteX="33dp"
             tools:layout_editor_absoluteY="138dp"
             tools:text="@string/name" />
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:text="@string/sexual"
             android:textSize="18sp"
-            app:layout_constraintRight_toLeftOf="@+id/checkBox"
+            app:layout_constraintRight_toLeftOf="@+id/cb_student_male"
             android:layout_marginRight="8dp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -58,21 +58,21 @@
             app:layout_constraintHorizontal_bias="0.506" />
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/cb_student_male"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CheckBox"
             tools:text="@string/male"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="218dp"
-            app:layout_constraintRight_toLeftOf="@+id/checkBox2"
+            app:layout_constraintRight_toLeftOf="@+id/cb_student_female"
             android:layout_marginRight="37dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline13"
             app:layout_constraintVertical_bias="0.0" />
 
         <CheckBox
-            android:id="@+id/checkBox2"
+            android:id="@+id/cb_student_female"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CheckBox"
@@ -82,11 +82,11 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="218dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/editText10"
+            app:layout_constraintBottom_toTopOf="@+id/et_student_class"
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/iv_student_portrait"
             android:layout_width="83dp"
             android:layout_height="77dp"
             app:srcCompat="@mipmap/ic_launcher_round"
@@ -109,14 +109,14 @@
             android:textSize="18sp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/editText9"
+            app:layout_constraintRight_toLeftOf="@+id/et_student_student_number"
             android:layout_marginRight="8dp"
             android:layout_marginTop="56dp"
             app:layout_constraintTop_toBottomOf="@+id/textView21"
             app:layout_constraintHorizontal_bias="0.506" />
 
         <EditText
-            android:id="@+id/editText8"
+            android:id="@+id/et_student_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -128,7 +128,7 @@
             app:layout_constraintBottom_toTopOf="@+id/guideline13" />
 
         <EditText
-            android:id="@+id/editText9"
+            android:id="@+id/et_student_student_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -143,7 +143,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <EditText
-            android:id="@+id/editText10"
+            android:id="@+id/et_student_class"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -152,7 +152,7 @@
             app:layout_constraintTop_toTopOf="@+id/guideline13"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/editText11"
+            app:layout_constraintBottom_toTopOf="@+id/et_student_school"
             android:layout_marginRight="16dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintVertical_bias="0.0" />
@@ -165,7 +165,7 @@
             android:textSize="18sp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/editText11"
+            app:layout_constraintRight_toLeftOf="@+id/et_student_school"
             android:layout_marginRight="8dp"
             app:layout_constraintTop_toTopOf="@+id/guideline13"
             android:layout_marginTop="92dp"
@@ -175,7 +175,7 @@
             app:layout_constraintVertical_bias="0.093" />
 
         <EditText
-            android:id="@+id/editText11"
+            android:id="@+id/et_student_school"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -183,7 +183,7 @@
             android:text="Name"
             android:layout_marginRight="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/editText10"
+            app:layout_constraintTop_toTopOf="@+id/et_student_class"
             android:layout_marginTop="76dp" />
 
         <TextView
@@ -194,21 +194,21 @@
             android:textSize="18sp"
             android:layout_marginTop="49dp"
             app:layout_constraintTop_toBottomOf="@+id/textView24"
-            app:layout_constraintRight_toLeftOf="@+id/editText12"
+            app:layout_constraintRight_toLeftOf="@+id/et_student_position"
             android:layout_marginRight="8dp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintHorizontal_bias="0.506" />
 
         <EditText
-            android:id="@+id/editText12"
+            android:id="@+id/et_student_position"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Name"
             android:layout_marginTop="25dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText11"
+            app:layout_constraintTop_toBottomOf="@+id/et_student_school"
             android:layout_marginRight="16dp"
             app:layout_constraintRight_toRightOf="parent" />
 
@@ -222,7 +222,7 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textView27"
             app:layout_constraintTop_toTopOf="@+id/textView25"
-            app:layout_constraintRight_toLeftOf="@+id/editText13"
+            app:layout_constraintRight_toLeftOf="@+id/et_student_mail"
             android:layout_marginRight="8dp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -230,14 +230,14 @@
             app:layout_constraintVertical_bias="0.663" />
 
         <EditText
-            android:id="@+id/editText13"
+            android:id="@+id/et_student_mail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Name"
             android:layout_marginTop="36dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText12"
+            app:layout_constraintTop_toBottomOf="@+id/et_student_position"
             android:layout_marginRight="16dp"
             app:layout_constraintRight_toRightOf="parent" />
 
@@ -253,14 +253,14 @@
             android:layout_marginBottom="8dp" />
 
         <EditText
-            android:id="@+id/editText14"
+            android:id="@+id/et_student_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Name"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText13"
+            app:layout_constraintTop_toBottomOf="@+id/et_student_mail"
             app:layout_constraintLeft_toRightOf="@+id/textView27"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
