--- a/app/src/main/res/layout/fragment_set_portrait.xml
+++ b/app/src/main/res/layout/fragment_set_portrait.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/iv_portrait_portrait"
         android:layout_width="117dp"
         android:layout_height="106dp"
         app:srcCompat="@mipmap/ic_launcher_round"
@@ -29,10 +29,10 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginBottom="61dp"
-        app:layout_constraintBottom_toTopOf="@+id/button6" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_portrait_take_picture" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn_portrait_take_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/take_picture"
