--- a/app/src/main/res/layout/fragment_student_sign.xml
+++ b/app/src/main/res/layout/fragment_student_sign.xml
@@ -25,20 +25,19 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.898"
+        app:layout_constraintVertical_bias="0.914"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintHorizontal_bias="0.502"
-        tools:layout_editor_absoluteY="366dp"
-        android:id="@+id/button3" />
+        android:id="@+id/btn_student_sign" />
 
 
 
     <ImageView
         android:visibility="gone"
-        android:id="@+id/imageView3"
+        android:id="@+id/iv_sign_defaullt"
         android:layout_width="188dp"
         android:layout_height="179dp"
         app:srcCompat="@mipmap/ic_launcher_round"
@@ -49,7 +48,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toTopOf="@+id/btn_student_sign"
         app:layout_constraintVertical_bias="0.484" />
 
     <ViewStub
@@ -58,9 +57,9 @@
         android:layout_height="wrap_content"
         android:layout="@layout/base_recyclerview"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toTopOf="@+id/btn_student_sign"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/iv_sign_defaullt"
         app:layout_constraintVertical_bias="0.162"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
