--- a/app/src/main/res/layout/activity_select_identity.xml
+++ b/app/src/main/res/layout/activity_select_identity.xml
@@ -23,70 +23,92 @@
         android:id="@+id/tv_identity_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/i_am"
         android:textSize="32sp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_select_identity"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_identity_school"
-        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_select_identity" />
 
     <TextView
         android:id="@+id/tv_identity_school"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="32sp"
-        tools:text="@string/bkuv"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginBottom="202dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline14" />
-
-    <RadioButton
-        android:id="@+id/rb_identity_student"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/student"
-        app:layout_constraintTop_toTopOf="@+id/guideline15"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline14"
-        app:layout_constraintVertical_bias="0.707"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/rb_identity_teacher"
-        android:layout_marginRight="8dp" />
-
-    <RadioButton
-        android:id="@+id/rb_identity_teacher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/teacher"
-        android:layout_marginRight="76dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline15"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline14"
-        app:layout_constraintVertical_bias="0.707" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:text="@string/bkuv" />
 
     <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/guideline14"
-        app:layout_constraintGuide_begin="466dp"
-        android:orientation="horizontal" />
-
-    <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline15"
-        app:layout_constraintGuide_begin="80dp"
-        android:orientation="horizontal" />
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="466dp" />
 
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="80dp" />
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="289dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_select_identity">
+
+
+        <RelativeLayout
+            android:layout_width="194dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/guideline14"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_select_identity"
+            app:layout_constraintVertical_bias="0.835">
+
+            <RadioButton
+                android:id="@+id/rb_identity_student"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/student" />
+
+            <RadioButton
+                android:id="@+id/rb_identity_teacher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/rb_identity_student"
+                android:layout_alignBottom="@+id/rb_identity_student"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="21dp"
+                android:layout_marginRight="21dp"
+                android:text="@string/teacher" />
+        </RelativeLayout>
+    </RadioGroup>
 </android.support.constraint.ConstraintLayout>
