--- a/app/src/main/res/layout/classes_item.xml
+++ b/app/src/main/res/layout/classes_item.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:id="@+id/tv_course_item_number"
+        android:id="@+id/tv_classes_item_number"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="0.33"
@@ -19,15 +19,25 @@
 
     <TextView
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-         android:layout_toRightOf="@id/tv_course_item_number"
-        android:id="@+id/tv_course_item_name"
+        android:layout_toRightOf="@id/tv_classes_item_number"
+        android:id="@+id/tv_classes_item_name"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="0.33"
         android:gravity="center"
-        android:text="大学物理"
+         tools:text="1320562"
         android:textSize="18sp" />
+
+    <CheckBox
+        android:id="@+id/cb_classes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_centerVertical="true"
+         />
 
 
 </RelativeLayout>
