--- a/app/src/main/res/layout/activity_select_identity.xml
+++ b/app/src/main/res/layout/activity_select_identity.xml
@@ -17,7 +17,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginTop="704dp" />
 
     <TextView
         android:id="@+id/tv_identity_tip"
