--- a/app/src/main/res/layout/sign_fragment_teacher_sign.xml
+++ b/app/src/main/res/layout/sign_fragment_teacher_sign.xml
@@ -15,7 +15,7 @@
         android:layout_centerInParent="true"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_teacher_sign"
+        app:layout_constraintBottom_toTopOf="@+id/btn_teacher_stop_sign"
         app:layout_constraintHorizontal_bias="0.525"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -25,7 +25,7 @@
 
 
     <Button
-        android:id="@+id/btn_teacher_sign"
+        android:id="@+id/btn_teacher_stop_sign"
         android:layout_width="113dp"
         android:layout_height="49dp"
         android:layout_alignLeft="@+id/iv_teacher_sign_icon"
@@ -46,11 +46,11 @@
 
     <ViewStub
         android:id="@+id/viewStub_teacher_sign"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_centerHorizontal="true"
         android:layout="@layout/base_recyclerview"
-        app:layout_constraintBottom_toTopOf="@+id/btn_teacher_sign"
+        app:layout_constraintBottom_toTopOf="@+id/btn_teacher_stop_sign"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_teacher_sign_icon" />
