--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -2,18 +2,18 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="68dp"
         android:layout_height="32dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="14dp"
         android:text="TextView"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText7"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_course_name"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:text="@string/course_name" />
 
@@ -27,39 +27,25 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/tv_add_course_name"
         android:layout_width="145dp"
         android:layout_height="43dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView11"
-        android:layout_marginLeft="8dp"
         app:layout_constraintHorizontal_bias="0.269"
-        app:layout_constraintTop_toTopOf="@+id/guideline7"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/at_slect_school_name"
-        app:layout_constraintVertical_bias="0.326" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="68dp"
-        android:layout_height="32dp"
-        android:layout_marginLeft="16dp"
-        android:text="@string/school_name"
-        android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/at_slect_school_name"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toRightOf="@+id/textView11"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline7" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_add_course_submit"
         android:layout_width="150dp"
         android:layout_height="49dp"
         android:layout_marginBottom="8dp"
@@ -71,46 +57,54 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline8" />
-
-    <AutoCompleteTextView
-        android:id="@+id/at_slect_school_name"
-        android:layout_width="145dp"
-        android:layout_height="35dp"
-        android:completionThreshold="1"
-        style="?android:attr/expandableListViewStyle"
-        android:hint="@string/input_school_name"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView10"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="0.269"
-        android:layout_marginBottom="33dp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView" />
+        app:layout_constraintTop_toTopOf="@+id/guideline8"
+        app:layout_constraintHorizontal_bias="0.536"
+        app:layout_constraintVertical_bias="0.4" />
 
     <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/guideline7"
-        app:layout_constraintGuide_begin="71dp"
-        android:orientation="horizontal" />
-
-    <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="71dp" />
+
+    <android.support.constraint.Guideline
         android:id="@+id/guideline8"
-        app:layout_constraintGuide_begin="293dp"
-        android:orientation="horizontal" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="293dp" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:text="@string/select_class"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteY="201dp" />
+
+    <EditText
+        android:id="@+id/et_add_course_class_name"
+        android:layout_width="148dp"
+        android:layout_height="38dp"
+        android:layout_marginRight="91dp"
+        android:drawableRight="@drawable/ic_add_circle_red_300_24dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="201dp" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rv_add_course_class"
         android:layout_width="145dp"
         android:layout_height="163dp"
-        android:layout_marginBottom="181dp"
+        android:layout_marginBottom="134dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.577"
+        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
