增加查看课程activity,和签到结果activity

--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -18,7 +18,7 @@
         tools:text="@string/course_name" />
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_select_identity"
+        android:id="@+id/toolbar_course_info"
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:background="@color/colorPrimary"
