--- a/app/src/main/res/layout/activity_select_identity.xml
+++ b/app/src/main/res/layout/activity_select_identity.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_select_identity"
+        android:id="@+id/toolbar_course_info"
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:background="@color/colorPrimary"
@@ -33,7 +33,7 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_identity_school"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_select_identity" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_course_info" />
 
     <TextView
         android:id="@+id/tv_identity_school"
@@ -72,7 +72,7 @@
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_select_identity">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_course_info">
 
 
         <RelativeLayout
@@ -86,7 +86,7 @@
             app:layout_constraintBottom_toTopOf="@+id/guideline14"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_select_identity"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_course_info"
             app:layout_constraintVertical_bias="0.835">
 
             <RadioButton
