--- a/app/src/main/res/layout/fragment_student_complete_sign.xml
+++ b/app/src/main/res/layout/fragment_student_complete_sign.xml
@@ -1,80 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="32dp"
+    android:layout_marginRight="32dp"
+    android:orientation="vertical">
 
 
     <TextView
-        android:id="@+id/textView35"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_type"
-        android:textSize="18sp"
-        tools:text="wifi"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView34"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="0.141"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="284dp" />
-
-    <TextView
-        tools:text="数据结构"
-        android:id="@+id/textView32"
+        android:id="@+id/tv_student_sign_result_name"
         android:layout_width="101dp"
         android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
         android:gravity="center"
         android:text="TextView"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_student_sign_result_time"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView33" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="数据结构" />
 
     <TextView
-        tools:text="2017-3-28:17:00"
-        android:id="@+id/textView33"
+        android:id="@+id/tv_student_sign_result_time"
         android:layout_width="154dp"
         android:layout_height="34dp"
+        android:layout_below="@+id/tv_student_sign_result_name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
         android:gravity="center"
         android:text="TextView"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="144dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="72dp"
+        tools:text="2017-3-28:17:00" />
 
     <TextView
         android:id="@+id/textView34"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/iv_student_sign_result_type"
+        android:layout_alignStart="@+id/iv_student_sign_result_type"
+        android:layout_below="@+id/tv_student_sign_result_time"
+        android:layout_marginTop="38dp"
         android:text="@string/sign_type"
         android:textSize="18sp"
-        android:layout_marginLeft="103dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="284dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="137dp" />
 
-    <ImageButton
-        android:id="@+id/imageButton2"
+    <ImageView
+        android:id="@+id/iv_student_sign_result_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher_round"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
+        android:layout_below="@+id/textView34"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="37dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="97dp" />
+        app:srcCompat="@mipmap/ic_launcher_round"
+        tools:layout_editor_absoluteY="179dp" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
