--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -14,44 +14,21 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/tv_change_pwd_tip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar_change_pwd"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/y20"
-        android:padding="9dp"
-        android:text="@string/change_password_tip"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/tv_change_pwd_account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/tv_change_pwd_tip"
-        android:layout_below="@id/tv_change_pwd_tip"
-        android:layout_marginTop="@dimen/y10"
-        android:padding="9dp"
-        android:text="到课账号：  larrysea"
-        android:textSize="18sp" />
-
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_below="@id/tv_change_pwd_account"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/y5"
+        android:layout_marginTop="5dp"
         android:background="@color/colorAccent" />
 
     <TextView
+
         android:id="@+id/tv_change_pwd_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/tv_change_pwd_tip"
-        android:layout_below="@id/tv_change_pwd_account"
-        android:layout_marginTop="@dimen/y10"
+        android:layout_below="@id/toolbar_change_pwd"
+        android:layout_marginTop="20dp"
         android:padding="9dp"
         android:text="@string/password"
         android:textColor="@android:color/black"
@@ -62,7 +39,6 @@
         android:id="@+id/tv_change_pwd_sure_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/tv_change_pwd_tip"
         android:layout_below="@id/tv_change_pwd_password"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:padding="9dp"
@@ -77,7 +53,7 @@
         android:layout_below="@id/tv_change_pwd_password"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/y10"
+        android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/tv_change_pwd_sure_password"
         android:hint="@string/input_password_again"
         android:inputType="textPassword"
@@ -89,9 +65,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/et_change_pwd_sure_pwd"
-        android:layout_below="@id/tv_change_pwd_account"
+        android:layout_alignTop="@id/tv_change_pwd_password"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/y10"
+        android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/tv_change_pwd_password"
         android:hint="@string/input_password"
         android:inputType="textPassword"
