--- a/app/src/main/res/layout/course_sign_detail_item.xml
+++ b/app/src/main/res/layout/course_sign_detail_item.xml
@@ -4,42 +4,43 @@
     android:id="@+id/rl_course_sign"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_generate_ripple_btn"
+    android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="10dp">
 
     <TextView
-        android:id="@+id/tv_couse_sign_times"
+        android:id="@+id/tv_course_sign_detail_times"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:text="1"
-        android:textSize="28sp" />
+        android:textSize="28sp"
+        tools:text="1" />
 
     <TextView
-        android:id="@+id/id_layout_setting_version_title_tv"
+        android:id="@+id/tv_course_sign_detail_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/tv_couse_sign_times"
+        android:layout_toRightOf="@id/tv_course_sign_detail_times"
         android:textColor="@color/black"
         android:textSize="18sp"
         tools:text="大学物理" />
 
     <TextView
+        android:id="@+id/tv_course_sign_detail_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/id_layout_setting_version_title_tv"
+        android:layout_below="@id/tv_course_sign_detail_name"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_toRightOf="@id/tv_couse_sign_times"
-        android:text="2017-9-21:10:00" />
+        android:layout_toRightOf="@id/tv_course_sign_detail_times"
+        tools:text="2017-9-21:10:00" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@drawable/ic_arrow_right_blue_36dp" />
 </RelativeLayout>
